--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^5.4.1",
 		"dotenv": "^16.3.1",
 		"esbuild": "^0.19.4",
 		"express": "^4.18.2",
@@ -23,6 +24,7 @@
 		"@types/express": "^4.17.18",
 		"@types/express-ws": "^3.0.2",
 		"@types/node": "^20.8.2",
+		"prisma": "^5.4.1",
 		"typescript": "^5.2.2"
 	}
 }
