--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@paralleldrive/cuid2": "^2.2.2",
 		"@prisma/client": "^5.4.1",
 		"dotenv": "^16.3.1",
 		"esbuild": "^0.19.4",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
 		"mqtt": "^5.1.0",
 		"nodemon": "^3.0.1",
-		"ts-node": "^10.9.1"
+		"ts-node": "^10.9.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.18",
 		"@types/express-ws": "^3.0.2",
+		"@types/jsonwebtoken": "^9.0.3",
 		"@types/node": "^20.8.2",
 		"prisma": "^5.4.1",
 		"typescript": "^5.2.2"
