--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
 	"dependencies": {
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@prisma/client": "^5.4.1",
+		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"esbuild": "^0.19.4",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"mqtt": "^5.1.0",
 		"nodemon": "^3.0.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-leaflet": "^3.0.0",
 		"ts-node": "^10.9.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
+		"@types/cors": "^2.8.14",
 		"@types/express": "^4.17.18",
 		"@types/express-ws": "^3.0.2",
 		"@types/jsonwebtoken": "^9.0.3",
