--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-leaflet": "^3.0.0",
+		"stripe": "^14.5.0",
 		"ts-node": "^10.9.1",
 		"zod": "^3.22.4"
 	},
