--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@prisma/client": "^5.4.1",
+		"axios": "^1.6.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.3.1",
 		"esbuild": "^0.19.4",
