--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@azure/storage-blob": "^12.17.0",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@prisma/client": "^5.4.1",
 		"axios": "^1.6.2",
@@ -20,6 +21,7 @@
 		"esbuild": "^0.19.4",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -33,6 +35,7 @@
 		"@types/express": "^4.17.18",
 		"@types/express-ws": "^3.0.2",
 		"@types/jsonwebtoken": "^9.0.3",
+		"@types/multer": "^1.4.10",
 		"@types/node": "^20.8.2",
 		"prisma": "^5.4.1",
 		"typescript": "^5.2.2"
